fix for bug #18395 (DOMXML crash on removing previously created attributes)